--- a/style.css
+++ b/style.css
@@ -15,26 +15,36 @@ body
 	justify-content: center;
 	align-items: center;
 	background: #1c1c25;
-	min-height: 100vh;
+
 }
 .block{
-	width: 50%;
+	width: 100%;
+	min-height: 100vh;
 	position: relative;
-	padding: 10px 10px 10px 10px;
+	padding: 10px 30px 10px 30px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.container{
+	width: 80%;
 }
 .block h2
 {
 	color: #fff;
+	font-size: 30px;
 }
 .block__header
 {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	padding: 15px 10px;
 }
 .block__header .fa.fa-plus
 {
 	color: #fff;
+	font-size: 30px;
 }
 .block__list
 {
@@ -64,24 +74,23 @@ body
 	margin: 4px 0;
 	border-left: 2px solid #24ff0b;
 	transition: 0.5s;
-	/* cursor: pointer; */
 	overflow: hidden;
 }
 .block__list ul li:hover
 {
-	left: 10px;
+	padding-left: 10px;
+	transition: 0.5s;
 }
 .block__list ul li span
 {
 	position: relative;
 	padding: 8px 0px 8px 8px;
-	padding-left: 12px;
 	display: inline-block;
 	z-index: 1;
 	transition: 0.5s;
 }
 .list__box div:nth-child(1) span{
-	font-size: 20px;
+	font-size: 30px;
 }
 .block__list ul li .list__box:hover span
 {
@@ -109,7 +118,7 @@ body
 	cursor: pointer;
 }
 .scroll span{
-	font-size: 12px;
+	font-size: 20px;
 	white-space: nowrap;
 }
 .scroll::-webkit-scrollbar {
@@ -125,14 +134,11 @@ body
 	width: 35px;
 	position: absolute;
 }
-/* .list__box{
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	position: relative;
-} */
-.fa
+.fa,fas
 {
+	cursor: pointer;
+}
+.fas.fa-times{
 	cursor: pointer;
 }
 .fa.fa-pencil
@@ -148,8 +154,8 @@ body
 	color: #c0c0c0;
 	position: absolute;
 	top: 10px;
-	right: 45px;
-	font-size: 20px;
+	right: 60px;
+	font-size: 30px;
 }
 .fa.fa-trash
 {
@@ -157,10 +163,10 @@ body
 	position: absolute;
 	top: 10px;
 	right: 15px;
-	font-size: 20px;
+	font-size: 30px;
 }
 .fas.fa-wifi{
-	color: #484848;
+	color: #fff;
 	position: absolute;
 	top: 90px;
 	left: 130px;
@@ -170,7 +176,7 @@ body
 .fa.fa-times{
 	color: #484848;
 	position: absolute;
-	right: 80px;
+	right: 60px;
 	top: 0px;
 }
 .list__box:hover .fa-pencil,
@@ -190,18 +196,25 @@ body
 	margin: 15px 0px 20px 0px;
 	display: none;
 	position: relative;
+	height: 340px;
 }
 .list__card.active{
 	display: block;
 }
 .card
 {
-	position: relative;
+	position: absolute;
+	display: block;
 	width: 508px;
 	height: 314px;
 	transform-style: preserve-3d;
 	perspective: 500px;
 	margin: 0 auto;
+
+	top: 40%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	z-index: 1;
 	
 }
 .card .face
@@ -212,21 +225,17 @@ body
 	width: 100%;
 	height: 100%;
 	box-shadow: 0 15px 35px rgba(0,0,0,0.5);
-	/* backdrop-filter: blur(10px); */
 	border-radius: 15px;
-	/* background: rgba(255,255,255,0.05); */
-	/* background-color: #0c0014;
-	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpolygon fill='%230d1838' points='1600%2C160 0%2C460 0%2C350 1600%2C50'/%3E%3Cpolygon fill='%230e315d' points='1600%2C260 0%2C560 0%2C450 1600%2C150'/%3E%3Cpolygon fill='%230f4981' points='1600%2C360 0%2C660 0%2C550 1600%2C250'/%3E%3Cpolygon fill='%231062a6' points='1600%2C460 0%2C760 0%2C650 1600%2C350'/%3E%3Cpolygon fill='%23117aca' points='1600%2C800 0%2C800 0%2C750 1600%2C450'/%3E%3C/g%3E%3C/svg%3E");
-	background-size: auto 147%;
-	background-position: center; */
 	transform-style: preserve-3d;
 	backface-visibility: hidden;
 	transition: 1s;
 	overflow: hidden;
 
-
-	/* background: radial-gradient(circle at 0% 50%, rgba(96, 16, 48, 0) 9px, rgba(0,0,0,.2) 10px, rgba(96, 16, 48, 0) 11px) 0px 10px, radial-gradient(at 100% 100%, rgba(96, 16, 48, 0) 9px, rgba(255,255,255,.2) 10px, rgba(96, 16, 48, 0) 11px), #FF5F00;
-    background-size: 20px 20px; */
+}
+.text__text.active{
+	border: 1px solid #fff;
+	padding: 5px 5px;
+	border-radius: 4px;
 }
 .visa{
 	background-color: #0c0014;
@@ -238,9 +247,25 @@ body
 	background: radial-gradient(circle at 0% 50%, rgba(96, 16, 48, 0) 9px, rgba(0,0,0,.2) 10px, rgba(96, 16, 48, 0) 11px) 0px 10px, radial-gradient(at 100% 100%, rgba(96, 16, 48, 0) 9px, rgba(255,255,255,.2) 10px, rgba(96, 16, 48, 0) 11px), #FF5F00;
 	background-size: 20px 20px;
 }
+.add__card_fon{
+	background: url("https://raw.githubusercontent.com/muhammederdem/credit-card-form/master/src/assets/images/23.jpeg");
+}
 
+.card2.active .face.front {
+	transform: rotateY(180deg);
+}
+.card2.active .face.back{
+	transform: rotateY(360deg);
+}
 
-
+.blackbar
+{
+	position: absolute;
+	width: 100%;
+	height: 60px;
+	background: #000;
+	top: 40px;
+}
 
 .card:hover .face.front
 {
@@ -254,30 +279,7 @@ body
 {
 	transform: rotateY(360deg);
 }
-/* .card .face.front:before
-{
-	content: '';
-	position: absolute;
-	bottom: 40px;
-	right: 40px;
-	width: 60px;
-	height: 60px;
-	background: #fff;
-	opacity: 0.5;
-	border-radius: 50%;
-}
-.card .face.front:after
-{
-	content: '';
-	position: absolute;
-	bottom: 40px;
-	right: 80px;
-	width: 60px;
-	height: 60px;
-	background: #fff;
-	opacity: 0.7;
-	border-radius: 50%;
-} */
+
 .chip
 {
 	position: absolute;
@@ -315,6 +317,26 @@ body
 	text-shadow: 0 2px 1px #0005;
 	font-family: 'Orbitron', sans-serif;
 }
+.number2
+{
+	position: absolute;
+	bottom: 130px;
+	left: 40px;
+	color: #fff;
+	color: #fff;
+	font-weight: 500;
+	width: 81%;
+	height: 50px;
+	letter-spacing: 5px;
+	font-size: 30px;
+	text-shadow: 0 2px 1px #0005;
+	font-family: 'Orbitron', sans-serif;
+	padding: 6px 9px;
+}
+.number2.active{
+	border: 2px solid #fff;
+	border-radius: 8px;
+}
 .valid
 {
 	position: absolute;
@@ -335,7 +357,7 @@ body
 	font-weight: 400;
 	letter-spacing: 2px;
 }
-.cardHolder
+.card__holder
 {
 	position: absolute;
 	bottom: 40px;
@@ -351,7 +373,7 @@ body
 	bottom: 10px;
 	right: 20px;
 }
-.blackbar
+.black__bar
 {
 	position: absolute;
 	width: 100%;
@@ -373,7 +395,7 @@ body
 	text-transform: uppercase;
 	letter-spacing: 2px;
 }
-.ccvText .whitebar
+.ccvText .white__bar
 {
 	position: relative;
 	width: 400px;
@@ -396,14 +418,14 @@ body
 	left: 395px;
 	top: -35px;
 }
-.text
+.text__commit
 {
 	position: absolute;
 	bottom: 30px;
 	left: 30px;
 	right: 30px;
 	color: #fff;
-	font-size: 10px;
+	font-size: 12px;
 	line-height: 1.4em;
 	font-weight: 300;
 }
@@ -412,10 +434,8 @@ body
 	width: 100%;
 	height: 100%;
 	z-index: 10;
-	backdrop-filter: blur(10px);
-	border-top: 1px solid rgba(255,255,255,0.2);
-	border-left: 1px solid rgba(255,255,255,0.2);
-	box-shadow: 5px 5px 30px rgba(0,0,0,.2);
+	backdrop-filter: blur(3px);
+
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -426,6 +446,7 @@ body
 }
 .block__add.active{
 	display: flex;
+	align-items: flex-end;
 }
 .add__card
 {
@@ -436,66 +457,58 @@ body
 	padding: 20px;
 	position: relative;
 	width: 490px;
+	background: url("https://raw.githubusercontent.com/muhammederdem/credit-card-form/master/src/assets/images/23.jpeg");
 	
 }
-.shine 
-{
-	background: rgba(255,255,255,0.05); 
-	left: 390px; 
-	top: 0;
-	margin: 0 15px 0 0;
-	padding: 0;
-	position: absolute;
-	height: 100%;
-	width: 100%;
-	-webkit-transform: skew(50deg);
-	-moz-transform: skew(50deg);
-	-ms-transform: skew(50deg);
-	-o-transform: skew(50deg);
-	transform: skew(50deg);
-}
-.shine-layer-two 
-{
-	-webkit-transform: skew(80deg);
-	-moz-transform: skew(80deg);
-	-ms-transform: skew(80deg);
-	-o-transform: skew(80deg);
-	transform: skew(80deg);
-}
+
 .bank__name{
 	color: #fff;
 	font-weight: 500;
 	font-style: italic;
 	font-size: 24px;
-	margin-bottom: 30px;
+	margin-bottom: 14px;
 	text-align: right;
+	margin-right: 30px;
+	margin-top: 10px;
 }
 input
 { 
 	background: #ececec; 
 	border: 0;
 	border-radius: 4px;
-	font: 20px Inconsolata, sans-serif; 
+	font: 16px Inconsolata, sans-serif;
 	color: #303030;
 	margin: 0 2px 3px 0;
 	padding: 8px 10px;
-	text-align: center;
-	width: 23%; 
+	width: 100%;
 	-moz-box-shadow:    1px 1px 0px 1px #0e306e;
 	-webkit-box-shadow: 1px 1px 0px 1px #0e306e;
 	box-shadow:         1px 1px 0px 1px #0e306e;
 }
+
+.valid__err{
+	color: red;
+	font-size: 10px;
+	margin-left: 5px;
+	margin-top: 2px;
+	display: block;
+}
+input:invalid {
+	border: red solid 1px;
+}
+
+
+
 .number__card,
 .date{
 	margin-bottom: 10px;
+
 }
 .number__card input{
-	margin-right: 6px;
+	margin-right: 7px;
+
 }
-.number__card input:nth-child(4) 
-{
-	margin-right: 0;
-}
+
 .date input 
 {
 	margin-right: 10px;
@@ -507,10 +520,12 @@ input
 	width: 40px;
 }
 
-.full-name 
+.commit
 {
 	width: 100%;
 	text-align: left;
+	border-radius: 4px;
+	padding-left: 10px;
 }
 .instructions 
 {
@@ -518,20 +533,60 @@ input
 	font: 12px Anaheim, sans-serif; 
 	color: #ace4fa;
 	text-transform: uppercase;
+	display: block;
 }
 .btn__add{
-	background: transparent;
+	background: #2c1ff185;
 	font: 16px Anaheim, sans-serif;
 	color: #ace4fa;
-	float: right;
-	border: none;
+	border: 1px solid #2c1ff185;
+	border-radius: 4px;
+	cursor: pointer;
+	padding: 5px 5px;
+	margin-top: 15px;
 }
 .btn__add:hover{
-	color: #80ff80;
+	color: #000;
+	background: #80ff80;
+	border: 1px solid #80ff80;
 }
 .fas.fa-times{
 	position: absolute;
 	top: 20px;
 	right: 30px;
 	color: #fff;
+}
+
+.form{
+	width: 40%;
+	height: 60%;
+	border: 1px solid #fff;
+	border-radius: 10px;
+	z-index: 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	padding: 10px 45px;
+	position: absolute;
+	top: 60%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+}
+@media(max-device-width: 770px) {
+	.container{
+		width: 100%;
+	}
+	.block__list{
+		height: 1000px;
+	}
+	.form{
+		width: 60%;
+		height: 40%;
+	}
+}
+@media(max-device-width: 475px) {
+	.form{
+		height: 35%;
+	}
+
 }
